--- a/www/index.html
+++ b/www/index.html
@@ -2,22 +2,7 @@
 <!--
     Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
 
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
+    Ejemplo formulario con jQuery mobile
 -->
 <html>
     <head>
@@ -28,37 +13,49 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Generar fechas</title>
+        <title>Ejemplo form jquery mobile</title>
     </head>
     <body>
 
-<div data-role="page" action='#' id='main'>
-	<div data-role="header" data-theme="b">
-			<h3>Ingrese la siguiente info</h3>
+<div data-role="page" action='#' id='principal'>
+	<div data-role="header">
+			<h3>Ejemplo formulario</h3>
 	</div><!-- /header -->
 	<div data-role="content">
-		<form id='form_datos'>
-			<label>Fecha de inicio:</label>
-			<input type='date' id='f_inicio'>
-			<label>Fecha final:</label>
-			<input type='date' id='f_final'>
-			<label>Días de la semana:</label>
-			<label for="dia_1">
-				<input type='checkbox' name='lun'>Lunes
+		<form id='formulario'>
+			<label for='edad'>
+				Edad
+				<input type='range' min='18' max='45' value='18' id='edad'>
 			</label>
-			<label for="dia_2">
-				<input type='checkbox' name='mar'>Martes
+			<label for='busqueda'>
+				Buscar
+				<input type='search' id='busqueda' placeholder='p.e. palabra en mixteco'>
 			</label>
-			<label for="dia_3">
-				<input type='checkbox' name='mie'>Miercoles
+			<label for='condiciones'>
+				<input
+					type='checkbox' id='condiciones'
+					data-role='flipswitch'
+					data-on-text='Sí' data-off-text='No'
+				>
+				Aceptas las condiciones<small>(Flip switch)</small>
 			</label>
-			<label for="dia_4">
-				<input type='checkbox' name='jue'>Jueves
+			
+			<label for='colores'>
+				Tu color favorito
+				<select id='colores' name='colores'>
+					<option value='1'>rojo</option>
+					<option value='2'>verde</option>
+					<option value='3'>naranja</option>
+					<option value='4'>violeta</option>
+				</select>
 			</label>
-			<label for="dia_5">
-				<input type='checkbox' name='vie'>Viernes
+			
+			<label for='fecha'>
+				Fecha Nacimiento.
+				<input type='date' id='fecha'>
 			</label>
-			<input type='submit' value='Generar Fechas'>
+			
+			<input type='submit' value='Aceptar'>
 		</form>
 	</div><!-- fin role content -->
 </div><!-- fin role page -->
@@ -69,21 +66,11 @@
 			<h3>Dias generados</h3>
 	</div><!-- /header -->
 	<div data-role="content">
-		<table id='t-result' data-role="table" class="ui-responsive">
-			<thead>
-				<tr>
-					<th>Fecha</th>
-					<th>Dia</th>
-				</tr>
-			</thead>
-			<tbody>
-			</tbody>
-		</table>
+		<a href='#main' data-role='button' data-icon="arrow-l">Regresar al inicio</a>
 	</div><!-- fin role content -->
-	<a href='#main' data-role='button' data-icon="arrow-l">Regresar al inicio</a>
 </div><!-- fin role page -->
 
-        <script type="text/javascript" src="cordova.js"></script>
+        <!-- <script type="text/javascript" src="cordova.js"></script> -->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
